--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
         }());
 
         function updateTimer() {
-            const now = new Date();
+            const now = new Date(2025 5 18);
             const diff = now - startDate;
             const days = Math.floor(diff / (1000 * 60 * 60 * 24));
             const hours = Math.floor((diff / (1000 * 60 * 60)) % 24);
