--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         <i class="fas fa-music"></i>
         <span id="music-text">Play Our Song</span>
         <audio id="bg-music" loop>
-            <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+            <source src= "our song.mp3">
         </audio>
     </div>
 
